--- a/tools.css
+++ b/tools.css
@@ -138,7 +138,7 @@ h3 {
 
 .scan{
     height: 35rem;
-    margin-top: 90rem;
+    margin-top: 80rem;
 }
 
 .slider img:nth-child(1) {
@@ -173,6 +173,10 @@ h3 {
     animation-delay: 70s;
 }
 
+.slider img:nth-child(9) {
+    animation-delay: 80s;
+}
+
 
 @keyframes fade {
     0% {
@@ -195,9 +199,13 @@ h3 {
         opacity: 0;
     }
     70% {
-        opacity: 1;
+        opacity: 0;
     }
     80% {
+        opacity: 1;
+    }
+
+    90% {
         opacity: 1;
     }
 
