--- a/css/style.css
+++ b/css/style.css
@@ -192,7 +192,7 @@ img {
 .home-text p {
   font-size: 1.25rem;
   margin-bottom: 0;
-  font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+ font-family: 'Roboto', sans-serif;
   font-weight: 500;
 }
 
@@ -290,6 +290,10 @@ img {
 .about-text h3 {
   margin-bottom: 20px;
   font-size: 30px;
+}
+
+.about-text p{
+  font-family: 'Roboto', sans-serif;
 }
 
 .about-image img {
@@ -403,9 +407,13 @@ img {
   margin-right: 15px;
 }
 
-.social-media li a:hover {
-  color: #0000;
+
+
+.social-media .list ul li a:hover {
+  color: rgb(239, 93, 40); 
 }
+
+
 
 .footer-links a {
   display: block;
@@ -425,6 +433,15 @@ img {
   text-decoration: none;
 }
 
+.contact p i:hover {
+  color: rgb(239, 93, 40);
+
+}
+
+.contact p a i:hover {
+  color: rgb(239, 93, 40);
+
+}
 .copy-write {
   text-align: center;
   font-size: 14px;
@@ -443,6 +460,17 @@ img {
   .testimonial-grid,
   .footer-content {
     flex-direction: column;
+  }
+
+  .center {
+    font-size: 30px;
+  }
+
+  .mb-2{
+    font-size: 25px;
+  }
+  .why-us-content ul li {
+    font-size: 25px;
   }
 
   .nav-items {
@@ -550,6 +578,10 @@ img {
 .footer-content h3{
   font-size: 19px;
 }
+
+.about-text h3 {
+  font-size: 20px;
+}
 }
 
 @media only screen and (max-width: 768px) {
@@ -561,9 +593,24 @@ img {
     grid-column: auto;
   }
 
+  .center {
+    font-size: 20px;
+  }
+
   .contact h3{
     padding: 0 0 0 0;
   
+  }
+
+  .mb-2{
+    font-size: 20px;
+  }
+
+  .why-us-content ul li {
+    font-size: 20px;
+  }
+  .about-text h3 {
+    font-size: 20px;
   }
   .footer-content {
     gap: 20px;
@@ -599,6 +646,10 @@ img {
     font-size: 1.3rem;
 }
 
+.about-text h3 {
+  font-size: 15px;
+}
+
   .home-text p {
     font-size: 1rem;
   }
@@ -607,7 +658,11 @@ img {
     right: 2rem;
   }
   .center {
-    font-size: 30px;
+    font-size: 15px;
+}
+
+.mb-2{
+  font-size: 15px;
 }
 
   .nav-items.active {
@@ -628,6 +683,10 @@ img {
   .contact h3{
     padding: 0 0 0 0;
   
+  }
+
+  .why-us-content ul li {
+    font-size: 15px;
   }
 
   .footer-parag p {
